# trtbl

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  main.cpp  stylize.py
src/: CMakeLists.txt  ExpressionParserDefaultSetup.cpp  Setup.hpp  TrTblSetup.hpp  TruthTableExpressionParser.cpp  TruthTableExpressionParser.hpp  TruthTableSetup.cpp
